prod init build

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
       }
     })(window);
   </script>
-</head>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
+<link rel="stylesheet" href="styles.50de228e960969dad764.css"></head>
 
 <body>
   <vk-app></vk-app>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.fec146f4472ee5fb9cac.js"></script><script type="text/javascript" src="scripts.9615bd4c00b94a488d60.js"></script><script type="text/javascript" src="main.3f346ef0354af94fce5d.js"></script></body>
 
 </html>
