--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>vkrepkiy.github.io</title>
+  <title>krepkiy.dev</title>
   <base href="/">
   <style>
     html {
